# docklord

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.example
.github/workflows/: release.yml
crates/coordinator/libs/lib-coordinator-core/: Cargo.toml
crates/coordinator/libs/lib-coordinator-core/src/: auth_state.rs  lib.rs
crates/coordinator/libs/lib-coordinator-grpc/: Cargo.toml
crates/coordinator/libs/lib-coordinator-grpc/src/: grpc_server.rs  grpc_server_service.rs  lib.rs
crates/coordinator/libs/lib-coordinator-rest/: Cargo.toml
crates/coordinator/libs/lib-coordinator-rest/src/: container_actions.rs  container_logs.rs  container_status.rs  get_containers.rs  lib.rs  rest_server.rs
crates/coordinator/libs/lib-coordinator-ws/: Cargo.toml
crates/coordinator/libs/lib-coordinator-ws/src/: lib.rs  ws_observe_containers.rs  ws_server.rs
crates/coordinator/services/coordinator-runner/: Cargo.toml
crates/coordinator/services/coordinator-runner/src/: lib.rs
crates/node/libs/lib-node-containers/: Cargo.toml
crates/node/libs/lib-node-containers/src/: lib.rs
crates/node/libs/lib-node-grpc/: Cargo.toml
crates/node/libs/lib-node-grpc/src/: grpc_client.rs  lib.rs
crates/node/services/node-runner/: Cargo.toml
crates/node/services/node-runner/src/: lib.rs
crates/proto/: Cargo.toml  build.rs  conversation.proto
crates/proto/src/: lib.rs
