[workspace.lints.rust]
unsafe_code = "forbid"
# unused = "allow" # For experimental dev.

[workspace]
resolver = "2"
members = [
    "crates/bin/docklord-runner",
    "crates/coordinator/libs/lib-coordinator-core",
    "crates/coordinator/libs/lib-coordinator-grpc", "crates/coordinator/libs/lib-coordinator-rest",
    "crates/coordinator/libs/lib-coordinator-ws",
    "crates/coordinator/services/coordinator-runner", "crates/node/libs/lib-node-containers", "crates/node/libs/lib-node-grpc",
    "crates/node/services/node-runner",
    "crates/proto",

    # "crates/libs/lib-chat",
    # "crates/libs/lib-core",
    # "crates/libs/lib-utils",
    # -- Application Libraries
    # "crates/libs/lib-utils", # e.g., base64, time.
    # "crates/libs/lib-rpc", # e.g., rpc routing.
    # "crates/libs/lib-auth", # e.g., for pwd, token.
    # "crates/libs/lib-core", # e.g., model, ctx, config.

    # # -- Application Services
    # "crates/services/web-server",
    # "crates/services/grpc-server",
    # "crates/tools/performance-test",
    # "crates/tools/grpc-client",

    # # -- Tools
    # "crates/tools/gen-key",    
]
