[workspace.lints.rust]
unsafe_code = "forbid"
# unused = "allow" # For experimental dev.

[workspace]
resolver = "2"
members = [
    "crates/bin/docklord-runner",
    "crates/coordinator/libs/lib-coordinator-core",
    "crates/coordinator/libs/lib-coordinator-grpc",
    "crates/coordinator/libs/lib-coordinator-rest",
    "crates/coordinator/libs/lib-coordinator-ws",
    "crates/coordinator/services/coordinator-runner",
    "crates/node/libs/lib-node-containers",
    "crates/node/libs/lib-node-grpc",
    "crates/node/services/node-runner",
    "crates/proto",
]
