[package]
name = "lib-coordinator-grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-coordinator-core = { path = "../../libs/lib-coordinator-core" }
proto = { path = "../../../proto" }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.4", features = ["ws"] }
dashmap = "6.1.0"
tracing = "0.1"
futures-util = { version = "0.3", features = ["std"] }
tokio-stream = "0.1"

tonic = "0.11"
prost = "0.12"

[lints]
workspace = true

[build-dependencies]
tonic-build = "0.11"
