[package]
name = "lib-node-containers"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = "0.19.1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
proto = { path = "../../../proto" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[lints]
workspace = true
